--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-redux": "^7.2.6",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.1.1",
+    "react-scripts": "5.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "concurrently \"npm run start:css\" \"react-scripts start\"",
-    "start:css": "tailwindcss -o src/tailwind.css --watch",
-    "build": "npm run build:css && react-scripts build",
-    "build:css": "NODE_ENV=production tailwindcss -o src/tailwind.css -m",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,7 +42,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
-    "concurrently": "^6.4.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.2"
   }
